terraform/cloud-aws/src/modules/istio/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-api-platform-${ENV}
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - api-${ENV}.${ROOT_PUBLIC_DOMAIN}
