terraform/cloud-aws/src/modules/istio/templates/gateway_sv_rendered.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-sv-default-sandbox
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - sv-default.sandbox.poc.blue1sky.me
